--- a/CoffeeBoys/Views/Home/Register.cshtml
+++ b/CoffeeBoys/Views/Home/Register.cshtml
@@ -2,8 +2,8 @@
     ViewBag.Title = "Register";
 }
 
-<script type="text/javascript" src="Scripts/RegisterValidation.js"></script>
-<link rel="stylesheet" href="Content/Register.css">
+<script type="text/javascript" src="../../Scripts/RegisterValidation.js"></script>
+<link rel="stylesheet" href="../../Content/Register.css">
 
 
 <form action="AddUser" method="post" onsubmit="return onFormSubmit()" id="Register-form">
