--- a/CoffeeBoys/Views/Home/Register.cshtml
+++ b/CoffeeBoys/Views/Home/Register.cshtml
@@ -12,7 +12,8 @@
     <p>Password</p><input type="Password" name="Password" id="password" placeholder="Daboss212" />
     <p>Confirm Password</p><input type="password" name="ConfirmPassword" id="confirmpassword" placeholder="Daboss212" />
     <p>Email</p><input type="Email" id="email" placeholder="geoffm22@gmail.com" />
-    <p>Phone Number</p><input name="PhoneNumb" id="phoneNumber" placeholder="111-222-3333" />
+    <p>Phone Number</p><input name="PhoneNumb" id="phoneNumber" placeholder="111-222-3333" /><br />
+    <label class="control-label">Gender</label> Male: <input type="radio" name="Gender" value="Male" /> Female: <input type="radio" name="Gender" value="Female" /> Other: <input type="radio" name="Gender" value="Other" />
 
     <input type="submit" />
 </form> 
